--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -7,3 +7,26 @@
     min-width: 184.66px;
   }
 }
+
+/*
+shikiji syntax highlighting
+https://shikiji.netlify.app/guide/dual-themes#class-based-dark-mode
+*/
+:root {
+  --code-bg-color: var(--c-bg-light);
+  --code-hl-bg-color: var(--c-bg-darker);
+  --c-code-group-tab-title: var(--c-text);
+}
+
+html.dark .shiki,
+html.dark .shiki span {
+  color: var(--shiki-dark) !important;
+  font-style: var(--shiki-dark-font-style) !important;
+  font-weight: var(--shiki-dark-font-weight) !important;
+  text-decoration: var(--shiki-dark-text-decoration) !important;
+}
+
+// TODO: remove once PR #10 is merged  https://github.com/vuepress/ecosystem/pull/10/commits/a8c829e31e1518d0098c7e53480bcd5d5cd5c570
+.code-group__nav-tab {
+  color: var(--c-code-group-tab-title);
+}
